fixing the signup button that overlapping the nav

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ nav {
     padding: 5px;
     position: fixed;
     width: 100%;
+    z-index: 99;
 }
 
 nav img {
